# TriangleOpenGL

./: .gitignore  CMakeLists.txt  Licence.txt  README.md  oldCMakeLists.txt
src/: CMakeLists.txt  TriangleConfig.h.in
src/Linmath/: CMakeLists.txt
src/Logger/: CMakeLists.txt  logger.cpp  logger.h
src/MyApp/: CMakeLists.txt  appicon.rc  main.cpp
src/glad/: CMakeLists.txt  glad.c  glad.h
